fixed alignments

--- a/src/css/about.module.css
+++ b/src/css/about.module.css
@@ -9,7 +9,6 @@
   margin: 3rem 0;
   position: relative;
 }
-
 .about-img img {
   width: 100%;
   display: block;
@@ -18,14 +17,11 @@
 .about-img div {
   box-shadow: var(--mainBlue);
 }
-.about-info h4 {
-  font-size: 1.9rem;
-}
 .border {
   border: 5px var(--mainBlue);
   border-radius: 5px;
-  margin-top: 0.5rem;
-  margin-bottom: 1.5rem;
+  margin-top: 1.1rem;
+  margin-bottom: 2.3rem;
   height: 6px;
   width: 100%;
   background-color: var(--mainBlue);
@@ -37,7 +33,6 @@
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 3rem;
   }
-
   .about-img,
   .about-info {
     margin: 0;
