--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -25,7 +25,7 @@ body {
   font-weight: 300;
   color: var(--mainBlack);
   background: var(--mainWhite);
-  line-height: 1.5;
+  line-height: 1.7;
   font-size: 1.2rem;
 }
 h1,
